<resources>
    <string name="app_name">IntegraTec</string>

    <!-- CreateQRCode -->
    <string name="generarQR">Generar QR</string>
    <string name="tema">Tema:</string>
    <string name="fecha">Fecha:</string>
    <string name="imagen_de_codigo_qr">Imagen de codigo QR</string>
    <string name="guardar_qr">Guardar QR</string>
    <string name="numero_de_control">Número de Control</string>

    <!-- MainAdviser -->
    <string name="acercaDe">Acerca de</string>
    <string name="quejasSugerencias">Quejas y sugerencias</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="crearQR">Crear código QR</string>
    <string name="leerQR">Leer código QR</string>
    <string name="asesoriaPresencial">Asesoria Presencial</string>
    <string name="timeInicio">Hora Inicio</string>
    <string name="asesoriaOnline">Asesoria Online</string>
    <string name="switchEstado">Estado</string>
    <string name="URL">Introduce la url de la sesión</string>
    <string name="timeFinalizacion">Hora Finalización</string>
    <string name="infoExtra">Información extra</string>
    <string name="imageViewAsesor">Foto de asesor par.</string>
    <string name="publicar">Publicar asesoría</string>
    <string name="terminar">Terminar asesoría</string>
    <string name="publicando">Publicando</string>
    <string name="hora_fin">Hora Fin</string>
    <string name="hora_inicio">Hora Inicio</string>
    <string name="activo">Activo</string>
    <string name="inactivo">Inactivo</string>

    <!-- MainApp -->
    <string name="logo">logo</string>
    <string name="logo2">logo2</string>
    <string name="sesion_asesor">Sesión Asesor</string>
    <string name="asesores_disponibles">Asesores disponibles</string>

    <!--   Complaints and suggestions-->
    <string name="nombre_completo">Nombre Completo</string>
    <string name="nombre">Nombre</string>
    <string name="email">Correo Electrónico</string>
    <string name="queja">Queja</string>
    <string name="sugerencia">Sugerencia</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="agradecimientos">¡Gracias, atenderemos pronto tu </string>


    <!-- SplashScreen -->
    <string name="imagen">SplashScreen</string>


    <!-- Options -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SaludoAsesor">¡Bienvenido a IntegraTec Asesor!</string>
    <string name="descriptionImageOptions">Persona estudiando.</string>
    <string name="password">Contraseña</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="codigoCiencias">Código de Ciencias Básicas</string>
    <string name="siguiente">Siguiente</string>
    <string name="apellidos">Apellidos</string>
    <string name="registrarse">Registrarse</string>

    <!--about -->
    <string name="acerca_de">Acerca de IntegraTec</string>
    <string name="integraTec">IntegraTec</string>
    <string name="iconoregreso">iconoRegreso</string>
    <string name="confirmar_password">Confirmar Contraseña</string>
    <string name="olvidaste_password">¿Olvidaste tú contraseña?</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cancelar">Cancelar</string>
    <string name="actualizar">Actualizar</string>
    <string name="lugarAsesoria">Lugar de asesoría:</string>
    <string name="horario">Horario:</string>
    <string name="horario2">Horario</string>
    <string name="materia">Materia:</string>
    <string name="informacion_extra">Información extra:</string>
    <string name="no_hay_asesores_disponibles">No hay asesores disponibles</string>
    <string name="actualizar_lista_de_asesores">Actualizar lista de asesores</string>
    <string name="indique_el_lugar">Indique el lugar</string>
    <string name="cerrar">Cerrar</string>
    <string name="editar">editar</string>
    <string name="crear_pdf_asesorias">Crear PDF asesorías</string>
    <string name="crear_pdf_de_asesorados">Crear PDF de asesorados</string>
    <string name="nuevo_semestre">Nuevo semestre</string>
    <string name="eliminar">Eliminar todos los registros</string>
    <string name="content_new_semester">¿Quieres eliminar los registros de tus asesorados y asesorías? \n\nAl realizar la operación de ‘Eliminar todos los registros’, los datos serán eliminados del sistema y sólo tendrá la evidencia de los pdf. \n\nSi no quiere realizar ninguna operación da click en el botón de cerrar</string>
    <string name="modificar">Modificar</string>
    <string name="borrar">Borrar</string>

    <string name="registrar">Registrar</string>
    <string name="carrera">Carrera:</string>
    <string name="semestre_dialog">Semestre:</string>
    <string name="mis_asesorados">Mis asesorados</string>
    <string name="buscar">Buscar por nombre o número de control</string>
    <string name="agregar_asesorado">Agregar asesorado</string>
    <string name="sin_registros_para_mostrar">Sin registros para mostrar</string>
    <string name="seleccione_una_carrera">Seleccione una carrera</string>
    <string name="n_mero_de_control">Número de control</string>
    <string name="car">Carrera</string>
    <string name="seleccione_una_materia">Seleccione una materia</string>
    <string name="seleccione_una_carrera_spinner">Seleccione una carrera</string>
    <string name="tema_text">Tema</string>
    <string name="seleccione_un_lugar">Seleccione un lugar</string>
    <string name="fecha_tex">Fecha</string>
    <string name="icono_prinicipal">icono</string>
    <string name="publicar_asesoria">Publicar asesoría</string>
    <string name="mensajer_a_asesores">Mensajería asesores</string>
    <string name="notificaciones">Notificaciones</string>


</resources>
