<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/item_AcercaDe"
        android:title="@string/acerca_de" />
    <item
        android:id="@+id/item_Horarios"
        android:title="@string/horario2" />
    <item
        android:id="@+id/item_QuejasSugerencias"
        android:title="@string/quejasSugerencias" />
    <item
        android:id="@+id/item_EditarPerfil"
        android:title="@string/editar_perfil" />
    <item
        android:id="@+id/item_Crear_QR"
        android:title="@string/crearQR" />
    <item
        android:id="@+id/item_Crear_PDF_asesorias"
        android:title="@string/crear_pdf_asesorias" />
    <item
        android:id="@+id/item_Crear_PDF_asesorados"
        android:title="@string/crear_pdf_de_asesorados" />
    <item
        android:id="@+id/item_nuevo_semestre"
        android:title="@string/nuevo_semestre" />
    <item
        android:id="@+id/item_Asesorados"
        android:title="@string/mis_asesorados" />
    <item
        android:id="@+id/item_ActualizarLista"
        android:title="@string/actualizar_lista_de_asesores" />
    <item
        android:id="@+id/item_mensajeria_asesores"
        android:title="@string/mensajer_a_asesores" />
    <item
        android:id="@+id/item_CerrarSesion"
        android:title="@string/cerrarSesion" />



</menu>